--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "hardhat": "^2.9.5",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -18,6 +17,7 @@
     "@openzeppelin/hardhat-upgrades": "^1.17.0",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.3"
+    "ethers": "^5.6.3",
+    "hardhat": "^2.9.5"
   }
 }
